# iam851

./: .gitignore
class10/: .gitignore  CMakeLists.txt  README.md  print_matrix_fortran.F90  test_data_layout.c  test_data_layout_fortran.F90
class16/: .gitignore  CMakeLists.txt  test_average.cxx  test_average_fortran.F90  test_integration.cxx
class19/: CMakeLists.txt  mandelbrot.cxx  mandelbrot.gpl
class20/: CMakeLists.txt  mpi_message.cxx  test_integration.cxx  test_mpi.cxx
class22/: .gitignore  CMakeLists.txt  derivative.cxx  heat_eqn.h  heat_eqn_solve.cxx  kdv.cxx  kdv.ipynb  mpi_dl_test.cxx  mpi_domain.h  test_derivative.cxx  wave_equation.cxx  wave_equation.h  wave_equation.ipynb
class5/: CMakeLists.txt  Makefile  hello.cxx
class6/: CMakeLists.txt  README.md  factorial.cxx  test_factorial.cxx
class7/: CMakeLists.txt  bowling.cxx
hello/: hello.cxx
hello2/: .gitignore  Makefile  build.sh  greeting.c  hello.c  hello.h
hello3/: Makefile  README.md  build.sh  factorial.cxx  greeting.cxx  hello.cxx  hello.h
linear_algebra/: CMakeLists.txt
linear_algebra/c/: CMakeLists.txt  foo.c  linear_algebra.h  matrix.c  matrix_matrix_mul.c  matrix_vector_mul.c  test_matrix_matrix_mul.c  test_matrix_vector_mul.c  test_vector_add.c  test_vector_dot.c  vector.c  vector_dot.c
linear_algebra/cxx/: CMakeLists.txt  linear_algebra.h  matrix.cxx  matrix_matrix_mul.cxx  matrix_vector_mul.cxx  test_linear_algebra.cxx  test_vector_dot.cxx  vector.cxx  vector_add.cxx  vector_dot.cxx
